crates/axiom-typeck/tests/fixtures/errors/non_exhaustive_match.ax
enum Shape { Circle(Float), Rect(Float, Float) }
fn area(s: Shape) -> Float { match s { Circle(r) => r } }